--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jeongwon Min | Home
-author: Jeongwon MIn
+author: Jeongwon Min
 email: jmin8694@snu.ac.kr
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
@@ -12,13 +12,13 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Adam Denisov
-  tagline: Developer. Designer
+  name: Jeongwon Min
+  tagline: Developer
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
   dark_mode: true # set to true to add dark mode toggle
-  portfolio_image: "assets/original_profile_photo.png" # the path from the base directory of the site to the image to display (no / at the start)
+  portfolio_image: "assets/profile.jpg" # the path from the base directory of the site to the image to display (no / at the start)
   html_lang: "en" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
   condensed_mobile:
     #- home
@@ -26,9 +26,9 @@ plainwhite:
     - post
   # generate social links in footer
   social_links:
-    twitter: 
-    github:  
-    linkedIn:
+    twitter: samarsault
+    github:  MinJeongwon
+    #linkedIn: in/samarsault
     #dribbble: jekyll
     #flickr:   jekyll
     #instagram: jekyll
@@ -38,7 +38,13 @@ plainwhite:
     #soundcloud: jekyll
     #telegram: jekyll
     #gitlab: jekyll
-    #email: jekyll
+    email: jmin8694@snu.ac.kr
+
+  navigation:
+    - title: About
+      url: "/about"
+    - title: Work
+      url: "/work"
 
     # Mastodon instances
     # mastodon:
@@ -59,3 +65,4 @@ plainwhite:
 plugins:
   - jekyll-seo-tag
 #  - jekyll-feed
+
