--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jeongwon Min | Home
+title: Jeongwon Min | Home :: Welcome to Gardeniii's Homepage
 author: Jeongwon Min
 email: jmin8694@snu.ac.kr
 description: > # this means to ignore newlines until "show_exerpts:"
@@ -17,11 +17,11 @@ plainwhite:
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
-  dark_mode: true # set to true to add dark mode toggle
+  dark_mode: false # set to true to add dark mode toggle
   portfolio_image: "assets/profile_img.png" # the path from the base directory of the site to the image to display (no / at the start)
   html_lang: "en" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
   condensed_mobile:
-    #- home
+    - home
     - page
     - post
   # generate social links in footer
