--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jeongwon Min | Home :: Welcome to Gardeniii's Homepage
+title: Jeongwon Min | Home
 author: Jeongwon Min
 email: jmin8694@snu.ac.kr
 description: > # this means to ignore newlines until "show_exerpts:"
