--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Jeongwon Min | Home
+locale: "ko-KR"
+title: Jeongwonniii Blog
 author: Jeongwon Min
 email: jmin8694@snu.ac.kr
 description: > # this means to ignore newlines until "show_exerpts:"
@@ -17,8 +18,8 @@ plainwhite:
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
-  dark_mode: false # set to true to add dark mode toggle
-  portfolio_image: "assets/profile_img.png" # the path from the base directory of the site to the image to display (no / at the start)
+  #dark_mode: false # set to true to add dark mode toggle
+  portfolio_image: "assets/profile_photo.png" # the path from the base directory of the site to the image to display (no / at the start)
   html_lang: "en" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
   condensed_mobile:
     - home
@@ -59,8 +60,8 @@ plainwhite:
 # - about.md
 
 # Build settings
-#theme: plainwhite
-#remote_theme: samarsault/plainwhite-jekyll
+theme: plainwhite
+remote_theme: samarsault/plainwhite-jekyll
 
 plugins:
   - jekyll-seo-tag
