--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ sass:
   sass_dir: _sass
 plainwhite:
   name: Jeongwon Min
-  tagline: Developer
+  tagline: ✏️❣️📚
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
@@ -67,3 +67,9 @@ plugins:
   - jekyll-seo-tag
 #  - jekyll-feed
 
+# Math equation
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false #https://junsk1016.github.io/markdown/%EC%88%98%EC%8B%9D-%EC%A0%81%EC%9A%A9%EC%8B%9C%EC%BC%9C%EC%84%9C-%ED%99%9C%EC%9A%A9%ED%95%98%EA%B8%B0/
