--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ _site
 .jekyll-metadata
 vendor
 
+2022-07-22-Useful_Expressions-for-Paper.markdown
+2022-07-22-ACL-2022-Paper-List.markdown
 2022-07-15-GraphDialog-Integrating-Graph-Knowledge-into-End-to-End-Task-Oriented-Dialogue-Systems.markdown
 2022-07-13-Common-Ground-for-Conversational-qa-Models.markdown
